--- a/Mini_project_2/hearder.css
+++ b/Mini_project_2/hearder.css
@@ -1,5 +1,5 @@
 header {
-  position: fixed;
+  top: 0;
   width: 100vw;
   height: 48px;
 }
@@ -11,8 +11,9 @@ nav {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  border: 1px solid black;
-  padding: 0px 0px 0px 15px;
+  padding: 0px 16px;
+  border: 1px solid #dbdbdb;
+  border-bottom: none;
 }
 .nav__back_and_img__box {
   width: 100%;
@@ -44,7 +45,6 @@ nav {
 }
 
 .nav__back_and_img__box__right__search {
-  font-size: 22px;
   margin-right: 15px;
 }
 
@@ -56,14 +56,21 @@ nav {
   border: 1px solid #dbdbdb;
   border-radius: 16px;
   padding: 6px 14px;
+  background-color: transparent;
 }
 
-.topMenu {
-  display: flex;
-  align-items: center;
-  max-width: 600px;
-  margin: auto 0;
+.nav__back_and_img__box__right__search__Btn {
+  background-color: transparent;
+  border: none;
+  font-size: 22px;
+  cursor: pointer;
+}
 
-  height: 68px;
-  border: 1px solid black;
+.hidden {
+  display: none;
+}
+
+.nav__back_and_img__box__right__input{
+  border-radius: 10px;
+  margin-right: 10px;
 }
