--- a/mini_project_3/css/rock_paper_scissors.css
+++ b/mini_project_3/css/rock_paper_scissors.css
@@ -128,3 +128,41 @@
   border-radius: 10px;
   font-weight: 900;
 }
+/* ✋ */
+/* ✊ */
+/* ✌️ */
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  background-color: #fefefe;
+  margin: 30% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  height: 300px;
+  max-width: 300px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  gap: 20px;
+  justify-content: center;
+}
+
+.modal {
+  /* 기본적으로 모달은 숨겨져 있습니다 */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.hidden {
+  display: none;
+}
+
+.block {
+  display: block;
+}
