--- a/mini_project_3/css/rock_paper_scissors.css
+++ b/mini_project_3/css/rock_paper_scissors.css
@@ -166,3 +166,14 @@
 .block {
   display: block;
 }
+
+.modal_end {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
