--- a/mini_project_3/css/find_different_color.css
+++ b/mini_project_3/css/find_different_color.css
@@ -54,7 +54,9 @@ img {
 
 .palette {
   position: relative;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   flex-wrap: wrap;
   left: 0;
   width: 100%;
@@ -62,9 +64,9 @@ img {
 }
 
 .palette__item {
-  width: 50%;
-  height: 50%;
-  background-color: rgb(180, 177, 147);
+  width: 100%;
+  height: 100%;
+  background-color: red;
 }
 
 .modal {
